@@ -5,13 +5,14 @@ Version ?.?.?
 Version 2.5
 ~~~~~~~~~~~
 * Another 0.5ns jitter was found in Mark5B processing for data rates >= 2 Gbps.  This is now filed (2015 Feb 22 -- WFB)
+* Slightly more instructive messages when model files have disagreements with .calc files.
 
 Version 2.4
 ~~~~~~~~~~~
 * Add INTERLACEDVDIF Fake mode
 * Change polId to recBandId in the PCAL files as per documentation
 * Add support for TCP, UDP and Raw Ethernet Interlaced VDIF.  (TCP and UDP Not yet tested)
-* Text Mark5 XLRReadData() calls by tainting the end of the destination buffer and verifying it gets untainted.
+* Test Mark5 XLRReadData() calls by tainting the end of the destination buffer and verifying it gets untainted.
 * Add more generalized support for the zoo of Mark5 module directory formats
 * When reading data from Mark5 units, verify that the data is in the same format class as requested by the .input file.
 * Improve Mark5B decoding
